add second page and buttons
add second page and info in it also buttons in frt

--- a/recipes/page-two.html
+++ b/recipes/page-two.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Main page</title>
+  <title>Document</title>
 </head>
 <body>
-  <h1>Odin Recipies</h1>
-
-  <a href="../odin-recipes/recipes/page-two.html">Potato</a>
+  <h1>Potatoes</h1>
 </body>
 </html>
