--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
   <h1>Odin Recipies</h1>
 
-  <a href="../odin-recipes/recipes/page-two.html">Potato</a>
+  <a href="recipes/page-two.html">Potato</a>
 </body>
 </html>
