--- a/recipes/page-two.html
+++ b/recipes/page-two.html
@@ -7,5 +7,10 @@
 </head>
 <body>
   <h1>Potatoes</h1>
+  <img src="../img/potatoes.webp" alt="Roasted potatoes" height="350px" width="350px">
+
+  <p>Roasted red potatoes at their best — 
+  plain and simple. Red potatoes are tossed with olive oil, salt</p>
+  <p> and pepper, then roasted to perfection.</p>
 </body>
 </html>
