--- a/recipes/page-two.html
+++ b/recipes/page-two.html
@@ -12,5 +12,17 @@
   <p>Roasted red potatoes at their best — 
   plain and simple. Red potatoes are tossed with olive oil, salt</p>
   <p> and pepper, then roasted to perfection.</p>
+
+  <ul>
+    <ul>3 pounds small red new potatoes, halved</ul>
+    <ul>¼ cup olive oil</ul>
+    <ul>1 teaspoon salt and freshly ground black pepper</ul>
+  </ul>
+
+  <ul>
+    <ol>Gather all ingredients</ol>
+    <ol>Toss potatoes with oil, salt, and pepper in a bowl</ol>
+    <ol>Roast potatoes in the preheated oven until tender and golden brown</ol>
+  </ul>
 </body>
 </html>
