add home button in potato

--- a/recipes/page-two.html
+++ b/recipes/page-two.html
@@ -24,5 +24,7 @@
     <ol>Toss potatoes with oil, salt, and pepper in a bowl</ol>
     <ol>Roast potatoes in the preheated oven until tender and golden brown</ol>
   </ul>
+
+  <a href="../index.html"><strong>Home</strong></a>
 </body>
 </html>
