add recipes list in home page

--- a/recipes/page-two.html
+++ b/recipes/page-two.html
@@ -9,6 +9,7 @@
   <h1>Potatoes</h1>
   <img src="../img/potatoes.webp" alt="Roasted potatoes" height="350px" width="350px">
 
+  <h2>Descripton</h2>
   <p>Roasted red potatoes at their best — 
   plain and simple. Red potatoes are tossed with olive oil, salt</p>
   <p> and pepper, then roasted to perfection.</p>
