--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <h1>Odin Recipies</h1>
 
   <ul>
-    <a href="recipes/page-two.html">Potato</a>
-    <a href="recipes/page-two.html">Potato</a>
-    <a href="recipes/page-two.html">Potato</a>
+    <ol><a href="recipes/page-two.html">Potato</a></ol>
+    <ol><a href="recipes/page-two.html">Potato</a></ol>
+    <ol><a href="recipes/page-two.html">Potato</a></ol>
   </ul>
 </body>
 </html>
